--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -35,7 +35,7 @@ $app-direction: ltr;
 
 $colors: (
   primary:    #488aff,
-  secondary:  #32db64,
+  secondary:  #286ff3,
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222
@@ -86,3 +86,18 @@ $colors: (
 
 @import "roboto";
 @import "noto-sans";
+
+
+
+
+//Top tabs
+$toolbar-md-background: color($colors, secondary);
+
+//bottom tabs
+$tabs-md-background: color($colors, secondary);
+$tabs-md-tab-color-active: color($colors, light);
+$tabs-md-tab-color: color($colors, light);
+$tabs-md-tab-text-color: color($colors, light);
+
+$list-md-background-color: color($colors, secondary);
+$list-md-text-color: color($colors, light);
